--- a/force-app/main/default/classes/getProductList.cls
+++ b/force-app/main/default/classes/getProductList.cls
@@ -5,6 +5,7 @@ public with sharing class getProductList {
             List<PricebookEntry> Products = [
                 SELECT Id, Product2.Name, Product2.ProductCode, UnitPrice
                 FROM PricebookEntry
+                WHERE Pricebook2.IsActive = TRUE
             ];
 
             return Products;
